Refactor code to use 'final' and List.getFirst()
Updated method parameters to use 'final' for immutability and replaced usages of 'list.get(0)' with 'list.getFirst()' for clarity and modern Java practices. Also improved string and collection handling, and updated Maven compiler target/source to Java 21.