@@ -32,22 +32,22 @@ public class Helper {
     }
 
     @Nullable
-    public static GameConfiguration getGameConfigurationFromWinnerOrKiller(@Nullable Player player) {
+    public static GameConfiguration getGameConfigurationFromWinnerOrKiller(@Nullable final Player player) {
         if (player == null) {
             return null;
         }
         final UUID uniqueId = player.getUniqueId();
-        ConfigurationDao dao = plugin.getConfigurationDao();
-        for (GameConfiguration game : dao.getConfigurations(GameConfiguration.class)) {
-            String gameName = game.getName();
-            Winners w = plugin.getDatabaseManager().getLatestWinners();
+        final ConfigurationDao dao = plugin.getConfigurationDao();
+        for (final GameConfiguration game : dao.getConfigurations(GameConfiguration.class)) {
+            final String gameName = game.getName();
+            final Winners w = plugin.getDatabaseManager().getLatestWinners();
             if (w.getKiller(gameName) == null) {
                 continue;
             }
             if (w.getKiller(gameName).equals(uniqueId)) {
                 return game;
             }
-            List<UUID> playerWinners = w.getPlayerWinners(gameName);
+            final List<UUID> playerWinners = w.getPlayerWinners(gameName);
             if (playerWinners == null) {
                 continue;
             }
@@ -59,11 +59,11 @@ public class Helper {
     }
 
     @Nullable
-    public static FileConfiguration getConfigFromWinnerOrKiller(Player player) {
+    public static FileConfiguration getConfigFromWinnerOrKiller(final Player player) {
         if (player == null) {
             return null;
         }
-        GameConfiguration gameConfig = getGameConfigurationFromWinnerOrKiller(player);
+        final GameConfiguration gameConfig = getGameConfigurationFromWinnerOrKiller(player);
         if (gameConfig != null) {
             return gameConfig.getFileConfiguration();
         }
@@ -76,10 +76,10 @@ public class Helper {
      * @param player the player
      * @return true if he is a Winner
      */
-    public static boolean isWinner(Player player) {
-        ConfigurationDao dao = plugin.getConfigurationDao();
-        for (GameConfiguration game : dao.getConfigurations(GameConfiguration.class)) {
-            List<UUID> winners = plugin.getDatabaseManager().getLatestWinners().getPlayerWinners(game.getName());
+    public static boolean isWinner(final Player player) {
+        final ConfigurationDao dao = plugin.getConfigurationDao();
+        for (final GameConfiguration game : dao.getConfigurations(GameConfiguration.class)) {
+            final List<UUID> winners = plugin.getDatabaseManager().getLatestWinners().getPlayerWinners(game.getName());
             if (winners == null) {
                 continue;
             }
@@ -96,11 +96,11 @@ public class Helper {
      * @param player the player
      * @return true if he is a Winner
      */
-    public static boolean isKiller(Player player) {
-        ConfigurationDao dao = plugin.getConfigurationDao();
-        for (GameConfiguration game : dao.getConfigurations(GameConfiguration.class)) {
-            Winners latestWinners = plugin.getDatabaseManager().getLatestWinners();
-            UUID killer = latestWinners.getKiller(game.getName());
+    public static boolean isKiller(final Player player) {
+        final ConfigurationDao dao = plugin.getConfigurationDao();
+        for (final GameConfiguration game : dao.getConfigurations(GameConfiguration.class)) {
+            final Winners latestWinners = plugin.getDatabaseManager().getLatestWinners();
+            final UUID killer = latestWinners.getKiller(game.getName());
             if (killer == null) {
                 continue;
             }
@@ -117,12 +117,12 @@ public class Helper {
      * @param player the killer
      * @return true if it is priority
      */
-    public static boolean isKillerPriority(Player player) {
+    public static boolean isKillerPriority(final Player player) {
         if (isKiller(player)) {
-            ConfigurationDao dao = plugin.getConfigurationDao();
-            for (GameConfiguration game : dao.getConfigurations(GameConfiguration.class)) {
-                Winners latestWinners = plugin.getDatabaseManager().getLatestWinners();
-                UUID killer = latestWinners.getKiller(game.getName());
+            final ConfigurationDao dao = plugin.getConfigurationDao();
+            for (final GameConfiguration game : dao.getConfigurations(GameConfiguration.class)) {
+                final Winners latestWinners = plugin.getDatabaseManager().getLatestWinners();
+                final UUID killer = latestWinners.getKiller(game.getName());
                 if (killer == null) {
                     continue;
                 }
@@ -140,12 +140,12 @@ public class Helper {
      * @param player the killer
      * @return if it is enabled
      */
-    public static boolean isKillerJoinMessageEnabled(Player player) {
+    public static boolean isKillerJoinMessageEnabled(final Player player) {
         if (isKiller(player)) {
-            ConfigurationDao dao = plugin.getConfigurationDao();
-            for (GameConfiguration game : dao.getConfigurations(GameConfiguration.class)) {
-                Winners latestWinners = plugin.getDatabaseManager().getLatestWinners();
-                UUID killer = latestWinners.getKiller(game.getName());
+            final ConfigurationDao dao = plugin.getConfigurationDao();
+            for (final GameConfiguration game : dao.getConfigurations(GameConfiguration.class)) {
+                final Winners latestWinners = plugin.getDatabaseManager().getLatestWinners();
+                final UUID killer = latestWinners.getKiller(game.getName());
                 if (killer == null) {
                     continue;
                 }
@@ -163,12 +163,12 @@ public class Helper {
      * @param player the killer
      * @return if it is enabled
      */
-    public static boolean isKillerQuitMessageEnabled(Player player) {
+    public static boolean isKillerQuitMessageEnabled(final Player player) {
         if (isKiller(player)) {
-            ConfigurationDao dao = plugin.getConfigurationDao();
-            for (GameConfiguration game : dao.getConfigurations(GameConfiguration.class)) {
-                Winners latestWinners = plugin.getDatabaseManager().getLatestWinners();
-                UUID killer = latestWinners.getKiller(game.getName());
+            final ConfigurationDao dao = plugin.getConfigurationDao();
+            for (final GameConfiguration game : dao.getConfigurations(GameConfiguration.class)) {
+                final Winners latestWinners = plugin.getDatabaseManager().getLatestWinners();
+                final UUID killer = latestWinners.getKiller(game.getName());
                 if (killer == null) {
                     continue;
                 }
@@ -181,7 +181,7 @@ public class Helper {
     }
 
     @NotNull
-    public static List<UUID> warriorListToUuidList(@NotNull List<Warrior> players) {
+    public static List<UUID> warriorListToUuidList(@NotNull final List<Warrior> players) {
         return players.stream().map(Warrior::getUniqueId).toList();
     }
 
@@ -191,9 +191,9 @@ public class Helper {
      * @param list the String list
      * @return the UUID list
      */
-    public static List<UUID> stringListToUuidList(List<String> list) {
-        List<UUID> uuidList = new ArrayList<>();
-        for (String uuid : list) {
+    public static List<UUID> stringListToUuidList(final List<String> list) {
+        final List<UUID> uuidList = new ArrayList<>();
+        for (final String uuid : list) {
             uuidList.add(UUID.fromString(uuid));
         }
         return uuidList;
@@ -206,13 +206,13 @@ public class Helper {
      * @param list the UUID list
      * @return the String list
      */
-    public static List<String> uuidListToPlayerNameList(List<UUID> list) {
+    public static List<String> uuidListToPlayerNameList(final List<UUID> list) {
         if (list == null) {
             return null;
         }
-        List<String> playerNameList = new ArrayList<>();
-        for (UUID uuid : list) {
-            OfflinePlayer offlinePlayer = Bukkit.getOfflinePlayer(uuid);
+        final List<String> playerNameList = new ArrayList<>();
+        for (final UUID uuid : list) {
+            final OfflinePlayer offlinePlayer = Bukkit.getOfflinePlayer(uuid);
             if (offlinePlayer.getName() != null) {
                 playerNameList.add(offlinePlayer.getName());
             }
@@ -226,9 +226,9 @@ public class Helper {
      * @param list the UUID list
      * @return the String list
      */
-    public static List<String> uuidListToStringList(List<UUID> list) {
-        List<String> stringList = new ArrayList<>();
-        for (UUID uuid : list) {
+    public static List<String> uuidListToStringList(final List<UUID> list) {
+        final List<String> stringList = new ArrayList<>();
+        for (final UUID uuid : list) {
             stringList.add(uuid.toString());
         }
         return stringList;
@@ -240,12 +240,12 @@ public class Helper {
      * @param player the winner
      * @return if it is enabled
      */
-    public static boolean isWinnerJoinMessageEnabled(Player player) {
+    public static boolean isWinnerJoinMessageEnabled(final Player player) {
         if (isKiller(player)) {
-            ConfigurationDao dao = plugin.getConfigurationDao();
-            for (GameConfiguration game : dao.getConfigurations(GameConfiguration.class)) {
-                Winners latestWinners = plugin.getDatabaseManager().getLatestWinners();
-                List<UUID> playerWinners = latestWinners.getPlayerWinners(game.getName());
+            final ConfigurationDao dao = plugin.getConfigurationDao();
+            for (final GameConfiguration game : dao.getConfigurations(GameConfiguration.class)) {
+                final Winners latestWinners = plugin.getDatabaseManager().getLatestWinners();
+                final List<UUID> playerWinners = latestWinners.getPlayerWinners(game.getName());
                 if (playerWinners == null) {
                     continue;
                 }
@@ -263,12 +263,12 @@ public class Helper {
      * @param player the winner
      * @return if it is enabled
      */
-    public static boolean isWinnerQuitMessageEnabled(Player player) {
+    public static boolean isWinnerQuitMessageEnabled(final Player player) {
         if (isWinner(player)) {
-            ConfigurationDao dao = plugin.getConfigurationDao();
-            for (GameConfiguration game : dao.getConfigurations(GameConfiguration.class)) {
-                Winners latestWinners = plugin.getDatabaseManager().getLatestWinners();
-                List<UUID> playerWinners = latestWinners.getPlayerWinners(game.getName());
+            final ConfigurationDao dao = plugin.getConfigurationDao();
+            for (final GameConfiguration game : dao.getConfigurations(GameConfiguration.class)) {
+                final Winners latestWinners = plugin.getDatabaseManager().getLatestWinners();
+                final List<UUID> playerWinners = latestWinners.getPlayerWinners(game.getName());
                 if (playerWinners == null) {
                     continue;
                 }
@@ -286,10 +286,10 @@ public class Helper {
      * @param entity the entity to investigate
      * @return the attacker/killer or null
      */
-    public static @Nullable Player getPlayerAttackerOrKiller(Entity entity) {
-        if (entity instanceof Player damager) {
+    public static @Nullable Player getPlayerAttackerOrKiller(final Entity entity) {
+        if (entity instanceof final Player damager) {
             return damager;
-        } else if (entity instanceof Projectile projectile && projectile.getShooter() instanceof Player shooter) {
+        } else if (entity instanceof final Projectile projectile && projectile.getShooter() instanceof final Player shooter) {
             return shooter;
         }
         return null;
@@ -302,16 +302,16 @@ public class Helper {
      * @param collection the String collection
      * @return the String representation
      */
-    public static @NotNull String buildStringFrom(@NotNull Collection<String> collection) {
-        StringBuilder sb = new StringBuilder();
-        List<String> list = new ArrayList<>(collection);
-        for (String s : list) {
-            Game currentGame = plugin.getGameManager().getCurrentGame().orElse(null);
-            String listColor = plugin.getLang("list-color", currentGame);
+    public static @NotNull String buildStringFrom(@NotNull final Collection<String> collection) {
+        final StringBuilder sb = new StringBuilder();
+        final List<String> list = new ArrayList<>(collection);
+        for (final String s : list) {
+            final Game currentGame = plugin.getGameManager().getCurrentGame().orElse(null);
+            final String listColor = plugin.getLang("list-color", currentGame);
             sb.append(listColor);
-            if (s.equalsIgnoreCase(list.get(0))) {
+            if (s.equalsIgnoreCase(list.getFirst())) {
                 sb.append(s);
-            } else if (s.equals(list.get(list.size() - 1))) {
+            } else if (s.equals(list.getLast())) {
                 sb.append(" & ");
                 sb.append(s);
             } else {
@@ -328,12 +328,8 @@ public class Helper {
      * @param spaces the spaces
      * @return the spaces filled String
      */
-    public static String getSpaces(int spaces) {
-        StringBuilder s = new StringBuilder();
-        for (int i = 0; i < spaces; i++) {
-            s.append(" ");
-        }
-        return s.toString();
+    public static String getSpaces(final int spaces) {
+        return " ".repeat(Math.max(0, spaces));
     }
 
     /**
@@ -342,7 +338,7 @@ public class Helper {
      * @param integer the number
      * @return the length
      */
-    public static int getLength(int integer) {
+    public static int getLength(final int integer) {
         return String.valueOf(integer).length();
     }
 
@@ -353,15 +349,15 @@ public class Helper {
      * @param date2 date 2
      * @return true if they are equals
      */
-    public static boolean equalDates(Date date1, Date date2) {
-        Calendar d1 = Calendar.getInstance();
+    public static boolean equalDates(final Date date1, final Date date2) {
+        final Calendar d1 = Calendar.getInstance();
         d1.setTime(date1);
-        Calendar d2 = Calendar.getInstance();
+        final Calendar d2 = Calendar.getInstance();
         d2.setTime(date2);
 
-        boolean sameYear = d1.get(Calendar.YEAR) == d2.get(Calendar.YEAR);
-        boolean sameMonth = d1.get(Calendar.MONTH) == d2.get(Calendar.MONTH);
-        boolean sameDay = d1.get(Calendar.DAY_OF_MONTH) == d2.get(Calendar.DAY_OF_MONTH);
+        final boolean sameYear = d1.get(Calendar.YEAR) == d2.get(Calendar.YEAR);
+        final boolean sameMonth = d1.get(Calendar.MONTH) == d2.get(Calendar.MONTH);
+        final boolean sameDay = d1.get(Calendar.DAY_OF_MONTH) == d2.get(Calendar.DAY_OF_MONTH);
         return sameDay && sameMonth && sameYear;
     }
 
@@ -369,8 +365,8 @@ public class Helper {
         return caseInsensitiveMap(null);
     }
 
-    public static <V> @NotNull Map<String, V> caseInsensitiveMap(@Nullable Map<String, V> map) {
-        TreeMap<String, V> treeMap = new TreeMap<>(String.CASE_INSENSITIVE_ORDER);
+    public static <V> @NotNull Map<String, V> caseInsensitiveMap(@Nullable final Map<String, V> map) {
+        final TreeMap<String, V> treeMap = new TreeMap<>(String.CASE_INSENSITIVE_ORDER);
         if (map != null) {
             treeMap.putAll(map);
         }
